// Copyright 2021 Fraunhofer AISEC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
//           $$\                           $$\ $$\   $$\
//           $$ |                          $$ |\__|  $$ |
//  $$$$$$$\ $$ | $$$$$$\  $$\   $$\  $$$$$$$ |$$\ $$$$$$\    $$$$$$\   $$$$$$\
// $$  _____|$$ |$$  __$$\ $$ |  $$ |$$  __$$ |$$ |\_$$  _|  $$  __$$\ $$  __$$\
// $$ /      $$ |$$ /  $$ |$$ |  $$ |$$ /  $$ |$$ |  $$ |    $$ /  $$ |$$ | \__|
// $$ |      $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$\ $$ |  $$ |$$ |
// \$$$$$$\  $$ |\$$$$$   |\$$$$$   |\$$$$$$  |$$ |  \$$$   |\$$$$$   |$$ |
//  \_______|\__| \______/  \______/  \_______|\__|   \____/  \______/ \__|
//
// This file is part of Clouditor Community Edition.

syntax = "proto3";

package clouditor.assessment.v1;

import "buf/validate/validate.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "tagger/tagger.proto";

option go_package = "clouditor.io/clouditor/v2/api/assessment";

// A metric resource
message Metric {
  // Required. The unique identifier of the metric.
  string id = 1 [
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  // The description of the metric
  string description = 2 [
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  // The version of this metric
  string version = 3 [
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  // Optional comments that describe the purpose of this metric. They may also describe a scenario in which the metric can be useful.
  string comments = 4;

  string category = 5;

  // The implementation of this metric. This ensures that we are modelling an
  // association between a Metric and its MetricImplementation.
  optional MetricImplementation implementation = 6;

  // Optional, but required if the metric is removed. The metric is not deleted
  // for backward compatibility and the timestamp is set to the time of removal.
  optional google.protobuf.Timestamp deprecated_since = 7 [(tagger.tags) = "gorm:\"serializer:timestamppb;type:timestamp\""];
}

// Defines the operator and a target value for an individual metric
message MetricConfiguration {
  // The operator to compare the metric, such as == or >
  string operator = 1 [
    (buf.validate.field).string.pattern = "^(<|>|<=|>=|==|isIn|allIn)$",
    (google.api.field_behavior) = REQUIRED
  ];

  // The target value
  google.protobuf.Value target_value = 2 [
    (tagger.tags) = "gorm:\"serializer:json\"",
    (buf.validate.field).required = true,
    (google.api.field_behavior) = REQUIRED
  ];

  // Whether this configuration is a default configuration
  bool is_default = 3 [(google.api.field_behavior) = REQUIRED];

  // The last time of update
  google.protobuf.Timestamp updated_at = 4 [(tagger.tags) = "gorm:\"serializer:timestamppb;type:timestamp\""];

  // The metric this configuration belongs to
  string metric_id = 5 [
    (tagger.tags) = "gorm:\"primaryKey\"",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  // The target of evaluation this configuration belongs to
  string target_of_evaluation_id = 6 [
    (tagger.tags) = "gorm:\"primaryKey\"",
    (buf.validate.field).string.uuid = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

// MetricImplementation defines the implementation of an individual metric.
message MetricImplementation {
  // The metric which is implemented
  string metric_id = 1 [
    (buf.validate.field).string.min_len = 1,
    (tagger.tags) = "gorm:\"primaryKey\"",
    (google.api.field_behavior) = REQUIRED
  ];

  enum Language {
    LANGUAGE_UNSPECIFIED = 0;
    LANGUAGE_REGO = 1;
  }

  // The language this metric is implemented in
  Language lang = 2 [(buf.validate.field).enum.defined_only = true];

  // The actual implementation
  string code = 3 [
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  // The last time of update
  google.protobuf.Timestamp updated_at = 4 [(tagger.tags) = "gorm:\"serializer:timestamppb;type:timestamp\""];
}
